# metacore-stack

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .secrets.baseline  .spectral.yaml  ARCHITECTURE.md  BACKEND_API_TEST_PLAN.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONCEPTDEFINITION.md  CONFIGURACAO_PORTAS.md  CONNECTION_TEST_FIX.md  CONNECTION_TEST_VISUAL.md  CONTRIBUTING.md  CORS_FIX_EXPLAINED.md  CRITICAL_FIXES_EXPLAINED.md  DASHBOARD_README.md  DEVELOPMENT_SETUP.md  ENHANCED_INTEGRATION_TEST_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FIX.md  IMPLEMENTATION_SUMMARY_MCP.md  LAYER3_VALIDATION_SUMMARY.md  LICENSE  Makefile  ONBOARDING.md  PORT_CONFIGURATION.md  QUICKREF.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  ROOMOPERATOR_IMPLEMENTATION.md  ROOM_HOST_IMPLEMENTATION.md  SECURITY.md  eslint.config.mjs  lint-staged.config.mjs  package.json  (+2 more)
.github/: dependabot.yml
agent/: backlog.md
agents/python-room-entity/: .gitignore  README.md  pyproject.toml
agents/python-room-entity/python_room_entity/: __init__.py  agent.py  client.py  config.py  openai_client.py
agents/python-room-entity/python_room_entity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/python-room-entity/tests/: conftest.py  test_config.py  test_connection_error_handling.py  test_history_deque.py  test_openai_client.py  test_room_agent.py  test_room_client.py  test_ssl_verification.py  test_thread_safety.py
ci/: IMPLEMENTATION_SUMMARY.md  SUMMARY.md  analysis-report.md  automation-summary.md  tech-report.md  (+2 more)
(+278 files in other folders)
