[project]
name = "python-room-entity"
version = "0.1.0"
description = "Python client and AI agent for Metacore RoomServer entities"
requires-python = ">=3.11"
authors = [
  { name = "Metacore Stack" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "signalrcore>=0.9.4",
  "openai>=1.14.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.2",
  "requests>=2.32.0"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
filterwarnings = [
  "ignore::DeprecationWarning"
]
